# mars

./: .gitignore
mars/: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  build_android.py  mars.VC.db  mars.sln  mars_utils.py  readme.txt  z_bat_windows.bat  zcompile_android.bat  zmake2017.bat
mars/app/: ALL_BUILD.vcxproj  INSTALL.vcxproj  INSTALL.vcxproj.filters  app.sln  app.vcxproj  app.vcxproj.filters
mars/baseevent/: ALL_BUILD.vcxproj  INSTALL.vcxproj  INSTALL.vcxproj.filters  baseevent.sln  baseevent.vcxproj  baseevent.vcxproj.filters
mars/boost/: .gitignore  ALL_BUILD.vcxproj  INSTALL.vcxproj  INSTALL.vcxproj.filters  mars-boost.sln  mars-boost.vcxproj  mars-boost.vcxproj.filters
mars/comm/: .gitignore  ALL_BUILD.vcxproj  CMakeExtraFlags.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  comm.sln  comm.vcxproj  comm.vcxproj.filters  http.cc  singleton.h  time_utils.c  time_utils.h  verinfo.h
mars/comm/socket/: socket_address.cc  tcpclient.cc  tcpclient.h  udpclient.cc  udpclient.h
mars/comm/thread/: spinlock.h
mars/comm/windows/: projdef.h
mars/libraries/mars_xlog_sdk/: build.gradle
mars/libs/: copy_bat.bat
mars/libs/boost/: CMakeLists.txt
mars/libs/comm/: CMakeLists.txt
mars/log/: CMakeLists.txt
mars/log/src/: formater.cc
mars/raknet/: .gitignore  ALL_BUILD.vcxproj  Android.mk  CMakeLists.txt  INSTALL.vcxproj  RakNetPeer.cpp  RakNetPeer.h  RakNetWrapper.h  raknet.sln  raknet.vcxproj
mars/raknet/jni/: Android.mk  build.conf  export.exp  import.cc  sources.mk
mars/raknet/src/: BaseChannel.h  BaseRC4.cpp  BaseRC4.h  CCRakNetSlidingWindow.cpp  CCRakNetSlidingWindow.h  CPkgTracer.h  CircularBuffer.cpp  CircularBuffer.h  DR_SHA1.cpp  DS_MemoryPool.h  DS_Queue.h  Export.h  InternalPacket.h  MTUSize.h  MessageIdentifiers.h  MyAutoBuffer.h  NativeFeatureIncludes.h  Net.cpp  Net.h  NetChannel.cpp  NetChannel.h  NetConnector.cpp  NetConnector.h  NetConnectorTCP.cpp  NetRptApi.h  PacketLogger.cpp  RC4.h  RakMemoryOverride.h  RakNetConnector.cpp  RakNetConnector.h  RakNetConnectorDef.h  RakNetDefines.h  RakNetDefinesOverrides.h  RakNetSocket2.cpp  RakNetSocket2_Berkley.cpp  RakNetSocket2_Windows_Linux.cpp  RakNetSocket2_Windows_Linux_360.cpp  RakNetStatistics.cpp  RakNetStatistics.h  RakNetTypes.cpp  (+11 more)
mars/raknet/src/flatbuffers/: flatbuffers.h  hash.h  idl.h  util.h
mars/raknet/src/plat/: basetypes.h  dbg.h  memalloc.h  platform.h
mars/sdt/: ALL_BUILD.vcxproj  INSTALL.vcxproj  INSTALL.vcxproj.filters  sdt.sln  sdt.vcxproj  sdt.vcxproj.filters
mars/stn/: .gitignore  ALL_BUILD.vcxproj  INSTALL.vcxproj  INSTALL.vcxproj.filters  stn.sln  stn.vcxproj  stn.vcxproj.filters
mars/xlog/: ALL_BUILD.vcxproj  INSTALL.vcxproj  INSTALL.vcxproj.filters  mars-xlog.sln  mars-xlog.vcxproj  mars-xlog.vcxproj.filters  xlog.sln  xlog.vcxproj  xlog.vcxproj.filters
samples/: .gitignore
samples/Console/: .gitignore  Console.sln  Console.vcxproj  Console.vcxproj.filters  Source.cpp  TestKcp.cpp  TestTcp.cpp  TestUdp.cpp  TimeMeasure.h  kcpclient.h
samples/Console/libkcp/: udpclient.h  udpserver.h  udpsocket.h  udptask.h
samples/Console/libkcp/test/client/: client.cpp  client.sln  client.vcxproj
samples/Console/libkcp/test/server/: server.cpp  server.vcxproj.filters
samples/android/UnityNullTest35/Assets/: Test.unity
samples/android/UnityNullTest35/ProjectSettings/: ProjectSettings.asset
samples/android/UnityNullTest35/proj.android/UnityNullTest/: build.gradle  local.properties
samples/android/UnityNullTest35/proj.android/UnityNullTest/gradle/wrapper/: gradle-wrapper.properties
samples/android/UnityNullTest35/proj.android/UnityNullTest/src/main/: AndroidManifest.xml
samples/android/raknetSample/: settings.gradle
samples/android/raknetSample/app/: build.gradle
samples/android/raknetSample/app/src/main/: AndroidManifest.xml
samples/android/raknetSample/app/src/main/jni/: CMakeLists.txt  native-lib.cpp
samples/android/unity_rak/: unity_rak.Plugins.csproj  unity_rak.csproj  unity_rak.sln
samples/android/unity_rak/Assets/: Test.unity  TestRaknet.cs
samples/android/unity_rak/Assets/Plugins/: CommonLibs.dll.mdb
samples/android/unity_rak/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
samples/android/unity_rak/proj.android/unity_rak/: build.gradle
samples/android/xlogSample/: build.gradle
samples/android/xlogSample/app/: build.gradle
samples/android/xlogSample/gradle/wrapper/: gradle-wrapper.properties
samples/libknet/: INetSession.h  KcpClientImp.cpp  KcpClientImp.h  MyAutoBuffer.h  NetSessionKcp.cpp  NetSessionTcp.cpp  TimeMeasure.h  client_helper.cpp  client_helper.h  common.h  ikcp.c  ikcp.h  kcp_net.cpp  kcp_net.h  kcpclient.h  kcpclient_task.h  libknet.vcxproj  libknet.vcxproj.filters  udpclient.h  udpserver.h  udpsocket.h  udptask.h
samples/libknet/test/client/: .gitignore  client.cpp  client.vcxproj  client.vcxproj.filters
samples/libknet/test/server/: .gitignore  server.cpp  server.sln  server.vcxproj  server.vcxproj.filters
samples/libknet_test/: .gitignore  Program.cs  libknet.exp  libknet_test.csproj
samples/libknet_test/Properties/: AssemblyInfo.cs
samples/libknet_test/Wrapper/: knet.cs
(+36 files in other folders)
